cloudinary/cloudinary_android:original code