@@ -1,231 +1,216 @@
-# Cloud Foundry Login Server (Deprecated)
+Cloudinary Android SDK
+======================
 
-## Retirement / Deprecation
-The Cloud Foundry Login Server project has been retired. The functionality of the Login Server have been merged into the
-[Cloud Foundry UAA](https://github.com/cloudfoundry/uaa/)
+Cloudinary is a cloud service that offers a solution to a web application's entire image management pipeline.
 
-## Login Server
+Easily upload images to the cloud. Automatically perform smart image resizing, cropping and conversion without installing any complex software.
+Integrate Facebook or Twitter profile image extraction in a snap, in any dimension and style to match your website’s graphics requirements.
+Images are seamlessly delivered through a fast CDN, and much much more.
 
-[![Build Status](https://travis-ci.org/cloudfoundry/login-server.svg?branch=develop)](https://travis-ci.org/cloudfoundry/login-server)
-[![Coverage Status](https://coveralls.io/repos/cloudfoundry/login-server/badge.png?branch=develop)](https://coveralls.io/r/cloudfoundry/login-server?branch=develop)
+Cloudinary offers comprehensive APIs and administration capabilities and is easy to integrate with any web application, existing or new.
 
-Handles authentication in Cloud Foundry and delegates all other
-identity management tasks to the UAA.  Also provides OAuth2 endpoints
-issuing tokens to client apps for Cloud Foundry (the tokens come
-from the UAA and no data are stored locally).
+Cloudinary provides URL and HTTP based APIs that can be easily integrated with any Web development framework.
 
-## Co-ordinates
+## Requirements
+The library requires Android version 4.0.3 (Ice Cream Sandwich) and up.
 
-* Tokens: [A note on tokens, scopes and authorities](https://github.com/cloudfoundry/uaa/tree/master/docs/UAA-Tokens.md)
-* Technical forum: [vcap-dev google group](https://groups.google.com/a/cloudfoundry.org/forum/?fromgroups#!forum/vcap-dev)
-* Docs: [docs/](https://github.com/cloudfoundry/login-server/tree/master/docs)
-* API Documentation: [Login-APIs.md](https://github.com/cloudfoundry/login-server/tree/master/docs/Login-APIs.md)
-* Specification: [The Oauth 2 Authorization Framework](http://tools.ietf.org/html/rfc6749)
-* SAML: [OpenAM-README.md](https://github.com/cloudfoundry/login-server/tree/master/docs/OpenAM-README.md),
-        [Okta-README.md](https://github.com/cloudfoundry/login-server/tree/master/docs/Okta-README.md)
+## Gradle Integration
+Add the following dependency to your build.gradle:
 
-## Running and Testing the Login Server
+`implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.30.0'`
+## Manual Setup ######################################################################
+Download cloudinary-android-1.30.0.jar from [here](http://central.maven.org/maven2/com/cloudinary/cloudinary-android/1.30.0/cloudinary-android-1.30.0.aar) and cloudinary-core-1.26.0.jar from [here](http://central.maven.org/maven2/com/cloudinary/cloudinary-core/1.26.0/cloudinary-core-1.26.0.jar) and put them in your libs folder.
 
-The Login Server is a standard JEE servlet application, and you can
-build a war file and deploy it to any container you like (`./gradlew
-:war` and look in the `build/libs` directory).  For convenience there
-is also a Gradle task that will run the Login Server, the UAA and
-some sample apps all in the same container from the command line:
+## Maven Integration ######################################################################
+The cloudinary_android library is available in [Maven Central](http://repo1.maven.org/maven/). To use it, add the following dependency to your pom.xml:
 
-    $ git clone https://github.com/cloudfoundry/login-server.git
-    $ cd login-server && ./update
-    $ ./gradlew run
+    <dependency>
+        <groupId>com.cloudinary</groupId>
+        <artifactId>cloudinary-android</artifactId>
+        <version>1.30.0</version>
+    </dependency>
 
-You can run the Login Server tests using the command line as
-well. The integration tests require
-[PhantomJS](http://phantomjs.org/download.html) to be installed.
 
-    $ ./gradlew :test
-    $ ./gradlew :integrationTest
+## Try it right away
 
-You can run all tests for the login server and the uaa with
+Sign up for a [free account](https://cloudinary.com/users/register/free) so you can try out image transformations and seamless image delivery through CDN.
 
-    $ ./gradlew test integrationTest
+*Note: Replace `demo` in all the following examples with your Cloudinary's `cloud name`.*  
 
-There are two documents that can help you configure the login server in your environment.
+Accessing an uploaded image with the `sample` public ID through a CDN:
+
+    http://res.cloudinary.com/demo/image/upload/sample.jpg
+
+![Sample](https://res.cloudinary.com/demo/image/upload/w_0.4/sample.jpg "Sample")
+
+Generating a 150x100 version of the `sample` image and downloading it through a CDN:
+
+    http://res.cloudinary.com/demo/image/upload/w_150,h_100,c_fill/sample.jpg
+
+![Sample 150x100](https://res.cloudinary.com/demo/image/upload/w_150,h_100,c_fill/sample.jpg "Sample 150x100")
+
+Converting to a 150x100 PNG with rounded corners of 20 pixels:
+
+    http://res.cloudinary.com/demo/image/upload/w_150,h_100,c_fill,r_20/sample.png
+
+![Sample 150x150 Rounded PNG](https://res.cloudinary.com/demo/image/upload/w_150,h_100,c_fill,r_20/sample.png "Sample 150x150 Rounded PNG")
+
+For plenty more transformation options, see our [image transformations documentation](http://cloudinary.com/documentation/image_transformations).
+
+Generating a 120x90 thumbnail based on automatic face detection of the Facebook profile picture of Bill Clinton:
+
+    http://res.cloudinary.com/demo/image/facebook/c_thumb,g_face,h_90,w_120/billclinton.jpg
+
+![Facebook 90x120](https://res.cloudinary.com/demo/image/facebook/c_thumb,g_face,h_90,w_120/billclinton.jpg "Facebook 90x200")
+
+For more details, see our documentation for embedding [Facebook](http://cloudinary.com/documentation/facebook_profile_pictures) and [Twitter](http://cloudinary.com/documentation/twitter_profile_pictures) profile pictures.
+
+
+## Usage
+
+### Configuration
+
+Each request for building a URL of a remote cloud resource must have the `cloud_name` parameter set. 
+Setting the `cloud_name` parameter can be done either when initializing the library, or by using the CLOUDINARY_URL meta-data property in `AndroidManifest.xml`.
+
+The entry point of the library is the `MediaManager` object. `MediaManager.init()` must be called before using the library, preferably in `Application.onCreate()`.
+Here's an example of setting the configuration parameters programmatically in your `Applicaion.onCreate(`:
     
-[Login Server Configuration in deployment manifest](docs/Login-Server-Configuration.md)
+     Map config = new HashMap();
+     config.put("cloud_name", "myCloudName");
+     MediaManager.init(this, config);
+    
+Alternatively, When using the meta-data property, no configuration is required:
+    
+    MediaManager.init(this);
 
-[OpenAM Configuration](docs/OpenAM-Configuration.md)
+The added property `AndroidManifest.xml`. Note: You should only include the `cloud_name` in the value, the api secret and key should be left out of the application.
 
-## The Login Application
+    <manifest>
+        ...
+        <application>
+            ...
+            <meta-data android:name="CLOUDINARY_URL" android:value="cloudinary://@myCloudName"/>
+        </application>
+    <manifest>
 
-The UAA can authenticate user accounts, but only if it manages them
-itself, and it only provides a basic UI.  The Login app can be branded
-and customized for non-native authentication and for more complicated
-UI flows, like user registration and password reset.
 
-The login application is actually itself an OAuth2 endpoint provider,
-but delegates those features to the UAA server.  Configuration for the
-login application therefore consists of locating the UAA through its
-OAuth2 endpoint URLs, and registering the login application itself as
-a client of the UAA.  There is a `login.yml` for the UAA locations,
-e.g. for a local `vcap` instance:
 
-    uaa:
-      url: http://uaa.vcap.me
-      token:
-        url: http://uaa.vcap.me/oauth/token
-      login:
-        url: http://uaa.vcap.me/login.do
+### Embedding and transforming images
 
-and there is an environment variable (or Java System property),
-`LOGIN_SECRET` for the client secret that the app uses when it
-authenticates itself with the UAA.  The Login app is registered by
-default in the UAA only if there are no active Spring profiles (so not
-at all in `vcap`).  In the UAA you can find the registration in the
-`oauth-clients.xml` config file.  Here's a summary:
+Any image uploaded to Cloudinary can be transformed and embedded using powerful view helper methods:
 
-    id: login
-    secret: loginsecret
-    authorized-grant-types: client_credentials
-    authorities: ROLE_LOGIN
-    resource-ids: oauth
+The following example generates the url for accessing an uploaded `sample` image while transforming it to fill a 100x150 rectangle:
 
-### Use Cases
+    MediaManager.get().url().transformation(new Transformation().width(100).height(150).crop("fill")).generate("sample.jpg")
 
-1. Authenticate
+Another example, embedding a smaller version of an uploaded image while generating a 90x90 face detection based thumbnail: 
 
-        GET /login
+    MediaManager.get().url().transformation(new Transformation().width(90).height(90).crop("thumb").gravity("face")).generate("woman.jpg")
 
-    The Login Server presents a form login interface for the backend
-    UAA, or with other services (such as SAML).
+You can provide either a Facebook name or a numeric ID of a Facebook profile or a fan page.  
+             
+Embedding a Facebook profile to match your graphic design is very simple:
 
-2. Approve OAuth2 token grant
+    MediaManager.get().url().type("facebook").transformation(new Transformation().width(130).height(130).crop("fill").gravity("north_west")).generate("billclinton.jpg")
+                           
+Same goes for Twitter:
 
-        GET /oauth/authorize?client_id=app&response_type=code...
+    MediaManager.get().url().type("twitter_name").generate("billclinton.jpg")
 
-    Standard OAuth2 Authorization Endpoint.  Client credentials and
-    all other features are handled by the UAA in the back end, and the
-    login server is used to render the UI (see
-    `access_confirmation.html`).
+### Uploading
 
-3. Obtain access token
+The entry point for upload operations is the `MediaManager.get().upload()` call. All upload operations are dispatched to a background queue, with 
+a set of fully customizable rules and limits letting you choose when each upload request should actually run. Requests are automatically rescheduled to be
+retried later if a recoverable error is encountered (e.g. network disconnections, timeouts).
 
-        POST /oauth/token
+The upload results are dispatched asynchronously using `UploadCallback`. Global callbacks can be defined, as well as specific callbacks per request.
+Note: In order to receive global callbacks even when the app is already shut down, or in the background, the `ListenerService` class can be extended and registered in the manifest (see the class for further instructions). 
 
-    Standard OAuth2 Authorization Endpoint passed through to the UAA.
+The following examples uploads a `File`  using the default settings, a request upload callback, and an upload preset (more about upload presets below):
+    
+    String requestId = MediaManager.get().upload(imageFile).unsigned("sample_preset").callback(callback).dispatch();
+   
+The returned `requestId` is used to identify the request in global callbacks and to cancel the request if needed. The callback should be any implementation of `UploadCallback`.
 
-# Contributing to the Login Server
+The uploaded image is assigned a randomly generated public Id. As soon as `onSuccess` is called, the image is immediately available for download through a CDN:
 
-Here are some ways for you to get involved in the community:
+    MediaManager.get().url().generate("abcfrmo8zul1mafopawefg.jpg")
+      
+    http://res.cloudinary.com/demo/image/upload/abcfrmo8zul1mafopawefg.jpg
 
-* Get involved with the Cloud Foundry community on the mailing lists.
-  Please help out on the
-  [mailing list](https://groups.google.com/a/cloudfoundry.org/forum/?fromgroups#!forum/vcap-dev)
-  by responding to questions and joining the debate.
-* Create [github](https://github.com/cloudfoundry/login-server/issues) tickets for bugs and new features and comment and
-  vote on the ones that you are interested in.
-* Github is for social coding: if you want to write code, we encourage
-  contributions through pull requests from
-  [forks of this repository](http://help.github.com/forking/).  If you
-  want to contribute code this way, please reference an existing issue
-  if there is one as well covering the specific issue you are
-  addressing.  Always submit pull requests to the "develop" branch.
-* Watch for upcoming articles on Cloud Foundry by
-  [subscribing](http://blog.cloudfoundry.org) to the cloudfoundry.org
-  blog
+You can also specify your own public ID:
+    
+    String requestId = MediaManager.get().upload(uri).unsigned("sample_preset").option("public_id", "sample_remote").dispatch();
 
-## The Cloud Foundry SAML Login Server
+Using `RequestUploadPolicy`, an upload request can be configured to run under specific circumstance, or within a chosen time window:
 
-The saml_login server supports two additional features on top of what you get from the regular [login-server] [1].
-It adds authentication using an external SAML source. We have tested our authentication with [OpenAM] [2] and the vCenter SSO appliance.
+The following examples uploads local Uri resource, configured to run immediately (the default), with a maximum of 7 retries, and only on an unmetered network (e.g. wifi):
 
-  [1]: https://github.com/cloudfoundry/login-server/tree/master "login-server"
-  [2]: https://github.com/cloudfoundry/login-server/tree/master/OpenAM-README.md "OpenAM Installation Instructions"
+    String requestId = MediaManager.get().upload(uri)
+        .unsigned("sample_app_preset")
+        .constrain(TimeWindow.immediate())
+        .policy(new RequestUploadPolicy.Builder().maxRetries(7).networkPolicy(RequestUploadPolicy.NetworkType.UNMETERED).build())
+        .dispatch();
 
-###Configuring cf-release for a saml_login deployment
+For security reasons, mobile applications cannot contain the full account credentials, and so they cannot freely upload resources to the cloud.
+Cloudinary provides two different mechanisms to enable end-users to upload resources without providing full credentials.
 
-The saml_login deploys the same way as the login-server, with additional configuration parameters.
-Enabling saml is done using the `spring_profiles` configuration parameter. SAML can be used together, as two different profiles active
-at the same time.
+##### 1. Unsigned uploads using [Upload Presets.](http://cloudinary.com/blog/centralized_control_for_image_upload_image_size_format_thumbnail_generation_tagging_and_more) 
+You can create an upload preset in your Cloudinary account console, defining rules that limit the formats, transformations, dimensions and more.
+Once the preset is defined, it's name is supplied when calling upload. An upload call will only succeed if the preset name is used and the resource is within the preset's pre-defined limits.
 
-- Open your infrastructure manifest - for example cf-release/templates/cf-infrastructure-warden.yml
+The following example uploads a local resource, available as a Uri, assuming a preset named 'sample_preset' already exists in the account:
 
-  Add your Tomcat JVM options as well as the intended protocol to use (http/https)
-  <pre>
-      saml_login:
-        catalina_opts: -Xmx384m -XX:MaxPermSize=128m
-        protocol: http
+    String requestId = MediaManager.get().upload(uri).unsigned("sample_preset").dispatch();
 
-  </pre>
-  Scroll down to your login job and change the template to saml_login, it will be found under
-  <pre>
-    jobs:
-      - name: login_z1
-        template: saml_login
-  </pre>
+##### 2. Signed uploads with server-based signature
+Another way to allow uploading without credentials is using signed uploads. 
+It is recommended to generate the upload authentication signature on the server side, where it's safe to store the `api_secret`.
 
-- Open your cf-jobs.yml manifest and change the template for the login job
+Cloudinary's Android SDK allows providing server-generated signature and any additional parameters that were generated on the server side (instead of signing using `api_secret` locally).
 
-  <pre>
-      - name: login_z1
-        release: (( meta.release.name ))
-        template: saml_login
-  </pre>
+Your server can use any Cloudinary libraries (Ruby on Rails, PHP, Python & Django, Java, Perl, .Net, etc.) for generating the signature. The following JSON in an example of a response of an upload authorization request to your server:
 
-- Open your cf-properties.yml manifest to configure saml_login properties
+	{
+	  "signature": "sgjfdoigfjdgfdogidf9g87df98gfdb8f7d6gfdg7gfd8",
+	  "public_id": "abdbasdasda76asd7sa789",
+	  "timestamp": 1346925631,
+	  "api_key": "123456789012345"
+	}
 
-  Please note the spring_profiles setting
-  - spring_profiles: saml (uses only  saml with an external SAML provider)
+When initializing `MediaManager`, a `SignatureProvider` can be sent. Whenever an upload requires signing, the library will call the provider's `provideSignature()` method, 
+where you should implement the call to your server's signing endpoint. This callback runs on a background a thread so there's no need to handle threading:
 
-  <pre>
-    saml_login:
-      #standard login server configuration
-      catalina_opts: (( merge ))
-      uaa_certificate: ~
-      protocol: https
+    MediaManager.init(this, new SignatureProvider() {
+        @Override
+        public Signature provideSignature(Map options) {
+            // call server signature endpoint
+        }
+    }, null);
+        
 
-      links:
-        home: (( "https://console." domain ))
-        passwd: (( "https://console." domain "/password_resets/new" ))
-        signup: (( "https://console." domain "/register" ))
+## Additional resources ##########################################################
 
-      #if you wish to use saml
-      spring_profiles: saml
+Additional resources are available at:
 
-      #saml authentication information, only required if 'saml' is part of spring_profiles
-      entityid: cloudfoundry-saml-login-server
-      idpEntityAlias: vsphere-local
-      idpMetadataURL: "https://win2012-sso2:7444/websso/SAML2/Metadata/vsphere.local"
-      serviceProviderKeyPassword: password
-      serviceProviderKey: |
-        -----BEGIN RSA PRIVATE KEY-----
-        Proc-Type: 4,ENCRYPTED
-        DEK-Info: DES-EDE3-CBC,231BD428AF94D4C8
-        0Nmo90pX8byVS7ZlakMIoXdJSLlxqzi1pN0g1ye2U+9HgTLTLuMwWaPknZ/2NFtK
-        rO72ss8uc7xBAoMkOvcMTZCg5P4JDlmuQ31IabzRyOQcAxCPZedgarRnwxT6GUim
-        JtkzNPmAAgf1bfUTu/LNt2o01dW+qq+2qiwUxgUBM2xLBmadIWqqTOZbkFc9Xjvl
-        /IEnJgp/c49sNh68EpXPlsGJfW7jAh90nlA13H1fpvTsSg2/6wKbRsxxNkpVg0Nq
-        bQURQIO6htOLZBPMMpoPILp/KtKkd1zpaZJnbZGDo9AdwfAh9dUbEw8ukJwRg3Xl
-        lsptHoMGsGdvgViWZhCB/pAHYLh31G8oVMA/qPB9PNJYIK2aQZdm7yiAdf+m8Jxb
-        Do2xBH6XUeHkg2F0LWnC/FjaMRpLuliI9vvJVB7YCQKkMdgNVV0SCx39IiX0rEm5
-        8vuuoAH3b7b+maWp5+ffriNIcEFSlcmTPIgqZBboIORBNXZnHTUG7nGIML+nlOK9
-        zdvF2vAxchqOKroc6+SGFLNvNQd9S/nLH3vP+aX9iStL55G11+p2tL+bIGMWZj0h
-        Z+qqQoogtngRFbjcVoKYerFXbKG6xXzXUc4O3EbvAKvEi0HJodYccP3L7wIer1aY
-        VaMF2M05g5KedHosEfvvhU17xS9L4u2SRMZIQ3K8iLNEhZ6bOw6EnzTaKWeffrYr
-        UOjfMEgswcHfpxx1iD5T4RTwxuKOgtFhd1QM4enXPsU6uRU5PGSiB/0t6jal6ClF
-        PhtIrTwhx0vBR4rySx4raXdLClxxt5vLe826C3uwo/6HTdUsnDvIXA==
-        -----END RSA PRIVATE KEY-----
-      serviceProviderKeyPassword: password
-      serviceProviderCertificate: |
-        -----BEGIN CERTIFICATE-----
-        MIIBzzCCATgCCQDTMCX3wJYrVDANBgkqhkiG9w0BAQUFADAsMSowKAYDVQQDFCFz
-        YW1sX2xvZ2luLE9VPXRlc3QsTz12bXdhcmUsTz1jb20wHhcNMTMwNzAyMjMzOTU4
-        WhcNMTQwNzAyMjMzOTU4WjAsMSowKAYDVQQDFCFzYW1sX2xvZ2luLE9VPXRlc3Qs
-        Tz12bXdhcmUsTz1jb20wgZ8wDQYJKoZIhvcNAQEBBQADgY0AMIGJAoGBANYBRuep
-        WaoNA7/RsOUVlmOzxbhtfW8AstGXjsWbAmmg8NSruRlNuMz1WdCeESM3zBqLSyp8
-        Vf3j3ExzB2qquDbPXNA1k4EqgNya2E+6n3KsgVLCWQm4W46Pd7C6QswrR6JgUKaW
-        6KI8BgyJQ9wjL/nR8uqZouJJyRSLuIaGXIuXAgMBAAEwDQYJKoZIhvcNAQEFBQAD
-        gYEAXOojarkGv5nVZqTuY8BRM/TRt1oby3i0VRG70l0PcDlWft52aSvCd3t8ds2S
-        h92cXLz8nvHEBaBTkxTLtf2/h5x2KQhXyHoU1UU+JjOegoF+LD6KdmaVk2l35Na5
-        1V2AHsj+yDrJ9aKwt86jbBbcFkRphdkn5ivq71GCWRfcpZE=
-        -----END CERTIFICATE-----
-      nameidFormat: "urn:oasis:names:tc:SAML:2.0:nameid-format:persistent"
+* [Website](http://cloudinary.com)
+* [Documentation](http://cloudinary.com/documentation)
+* [Image transformations documentation](http://cloudinary.com/documentation/image_transformations)
+* [Upload API documentation](http://cloudinary.com/documentation/upload_images)
 
-  </pre>
+## Support
+
+You can [open an issue through GitHub](https://github.com/cloudinary/cloudinary_android/issues).
+
+Contact us at [support@cloudinary.com](mailto:support@cloudinary.com)
+
+Or via Twitter: [@cloudinary](https://twitter.com/#!/cloudinary)
+
+## Join the Community ##########################################################
+
+Impact the product, hear updates, test drive new features and more! Join [here](https://www.facebook.com/groups/CloudinaryCommunity).
+
+## License #######################################################################
+
+Released under the MIT license. 
